--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
     "next": "9.4.4",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.8"
+  },
+  "devDependencies": {
+    "tailwindcss": "^1.4.6"
   }
 }
