--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
+    "file-loader": "^6.0.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
   }
