--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
+    "@types/marked": "^0.7.4",
     "axios": "^0.19.2",
     "gray-matter": "^4.0.2",
+    "marked": "^1.1.0",
     "next": "9.4.4",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
