--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0",
     "next": "9.4.4",
+    "pg": "^8.2.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.8"
+    "reflect-metadata": "^0.1.13",
+    "sass": "^1.26.8",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/node": "^14.0.13",
