--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "pack": "babel ./src --out-dir dist --extensions \".ts,.tsx\""
   },
   "dependencies": {
+    "@babel/cli": "^7.10.3",
     "@types/axios": "^0.14.0",
     "@types/marked": "^0.7.4",
     "axios": "^0.19.2",
@@ -24,6 +26,7 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.10.3",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
