--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev:babel": "next dev",
+    "dev:babel": "concurrently \"next dev\" \"babel -w ./src --out-dir dist --extensions .ts,.tsx\"",
     "build": "next build",
     "start": "next start",
     "build:typeorm": "babel -w ./src --out-dir dist --extensions .ts,.tsx",
@@ -33,6 +33,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "concurrently": "^5.2.0",
     "file-loader": "^6.0.0",
     "tailwindcss": "^1.4.6",
     "typescript": "^3.9.5"
