--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.2",
     "marked": "^1.1.0",
     "next": "9.4.4",
+    "next-iron-session": "^4.1.7",
     "pg": "^8.2.1",
     "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-preset-env": "^6.7.0",
@@ -28,13 +29,13 @@
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
     "@babel/plugin-proposal-decorators": "^7.10.3",
+    "@types/axios": "^0.14.0",
+    "@types/marked": "^0.7.4",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
-    "@babel/cli": "^7.10.3",
-    "@types/axios": "^0.14.0",
-    "@types/marked": "^0.7.4",
     "concurrently": "^5.2.0",
     "file-loader": "^6.0.0",
     "tailwindcss": "^1.4.6",
