--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,14 @@
   ],
   "plugins": [
     [
+      "styled-components",
+      {
+        "ssr": true,
+        "displayName": true,
+        "preprocess": false
+      }
+    ],
+    [
       "@babel/plugin-proposal-decorators",
       {
         "legacy": true
