--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "16.13.1",
     "reflect-metadata": "^0.1.13",
     "sass": "^1.26.8",
+    "styled-components": "^5.1.1",
     "typeorm": "^0.2.25"
   },
   "devDependencies": {
