--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.1",
     "concurrently": "^5.2.0",
     "file-loader": "^6.0.0",
     "tailwindcss": "^1.4.6",
