--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "start": "docker restart psql1 && yarn dev:babel",
+    "start:psql1": "docker restart psql1 && yarn dev:babel",
     "dev:babel": "concurrently \"next dev\" \"yarn compile:watch\"",
     "compile:watch": "babel -w ./src --out-dir dist --extensions .ts,.tsx",
     "compile": "babel ./src --out-dir dist --extensions .ts,.tsx",
     "build": "next build",
-    "start:next": "next start",
+    "start": "next start",
     "build:typeorm": "babel -w ./src --out-dir dist --extensions .ts,.tsx",
     "migration:create": "typeorm migration:create",
     "migration:run": "typeorm migration:run",
