--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "migration:run": "typeorm migration:run",
     "migration:revert": "typeorm migration:revert",
     "entity:create": "typeorm entity:create",
-    "deploy": "git push && ssh blog@dev 'bash -s' < bin/deploy.sh"
+    "deploy": "git push && ssh blog@47.98.215.183 'bash -s' < bin/deploy.sh"
   },
   "dependencies": {
     "axios": "^0.19.2",
