--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,25 @@ server {
   listen       8080;
   listen  [::]:8080;
   server_name localhost;
+  gzip on;
+  gzip_disable "msie6";
+
+  gzip_comp_level 6;
+  gzip_min_length 1100;
+  gzip_buffers 16 8k;
+  gzip_proxied any;
+  gzip_types
+      text/plain
+      text/css
+      text/js
+      text/xml
+      text/javascript
+      application/javascript
+      application/x-javascript
+      application/json
+      application/xml
+      application/rss+xml
+      image/svg+xml/javascript;
   location ~ ^/_next/static/ {
     root    /usr/share/nginx/html;
     expires 30d;
